fixing nav bar to work on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,100 +1,88 @@
 /* setting up specifics to overide how bootstrap displays images */
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /*  adjust background color of all pages */
 
-body  {
-background-color: rgb(216, 177, 49);
-
+body {
+  background-color: rgb(216, 177, 49);
 }
-
 
 /* overide color and style on portfolio */
 
-
-
-
-
-.i1 , .i2 , .i3 , .i4 {
-    width: 350px;
-    height: 350px;
-    }
+/* resized images in portfolio - single col, not very responsive ! */
+.i1,
+.i2,
+.i3,
+.i4 {
+  width: 350px;
+  height: 350px;
+}
 
 .card {
-    width:18rem;
-    background: rgb(151, 8, 32);
-    
-  }
-  
-  .grid-container {
-      display: grid;
-      grid-gap: 0;
-      padding: 0px;
-      width: 350px;
-      height: 350px;
-  }
-  
-  .img {
-      width: 350px;
-      height: 350px;
-      padding: 0px;
-  }
+  width: 18rem;
+  background: rgb(151, 8, 32);
+}
 
-  .card-body {
-       color:rgb(243, 231, 233)
-       
-  }
+.grid-container {
+  display: grid;
+  grid-gap: 0;
+  padding: 0px;
+  width: 350px;
+  height: 350px;
+}
 
-  .img-thumbnail {
+.img {
+  width: 350px;
+  height: 350px;
+  padding: 0px;
+}
 
-    width: auto;
-    height: auto;
+.card-body {
+  color: rgb(243, 231, 233);
+}
 
-  }
+.img-thumbnail {
+  width: auto;
+  height: auto;
+}
 
-  .card-header {
+.card-header {
+  color: rgb(243, 231, 233);
+}
 
-    color:rgb(243, 231, 233)
-  }
+.card-text {
+  text-align: center;
+}
+/* social media github , linkedin and stack overflow --moved to main page also */
 
-  .card-text {
+.sidebar h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+}
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
+  z-index: 5;
+}
 
-    text-align: center;
-  }
-/* social media github , linkedin and stack overflow */
+/* Footer -- on main page not behaving */
 
-  .sidebar h2 {
-    padding-bottom: 20px;
-    margin-bottom: 15px;
-    line-height: 22px;
-    
-  }
-  .social {
-    width: 62px;
-    height: 62px;
-    margin-top: 8px;
-    margin-right: 5px;
-    z-index: 5;
-  }
-  
+#ch,
+#year {
+  text-align: center;
+}
 
-
-/* Footer  */
-
-
-  #ch , #year  {
-
-    text-align:center
-  }
-
-  footer {
-    position: sticky;
-    color: black;
-    bottom: 2%;
-    margin-top: 18%;
-    clear: both;
-    font-weight: bold;
+footer {
+  position: sticky;
+  color: rgb(155, 49, 49);
+  bottom: 2%;
+  margin-top: 18%;
+  clear: both;
+  font-weight: bold;
 }
